# brunch

./: .gitignore  .righteous-sandbox.json  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yaml  msrv.yaml
benches/: fn_fib.rs
brunch/: Cargo.toml
brunch/src/: lib.rs  macros.rs
brunch/src/bench/: error.rs  history.rs  mod.rs  stats.rs
src/: bench.rs  error.rs  lib.rs  macros.rs  math.rs  stats.rs  util.rs
src/bench/: history.rs  mod.rs  stats.rs
src/stats/: history.rs  mod.rs
