[package]
name = "brunch"
version = "0.10.2"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.87"
description = "A simple micro-benchmark runner."
license = "WTFPL"
repository = "https://github.com/Blobfolio/brunch"
readme = "README.md"
keywords = [ "benchmark", "profiling" ]
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"justfile",
	"release",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.bashman]
name = "Brunch"

[dependencies]
dactyl = "0.11.*"
unicode-width = "0.2.*"

[dev-dependencies]
quantogram = "=0.4.4"

[[bench]]
name = "fn_fib"
harness = false
