[package]
name = "brunch"
version = "0.1.0"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2018"
description = "A simple micro-benchmark runner."
license = "WTFPL"
repository = "https://github.com/Blobfolio/brunch"
publish = false

[dependencies]
serde_json = "1.0.*"

[dependencies.dactyl]
git = "https://github.com/Blobfolio/dactyl.git"
tag = "v0.1.0"

[dependencies.serde]
version = "1.0.*"
features = [ "derive" ]
